// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CxCardImageOverlay customize 1`] = `
<div>
  <div
    class="card-overlay bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CxCardImageOverlay component 1`] = `
<div>
  <div
    class="card-overlay"
  />
</div>
`;
